26) goahead: fix infinitive loop with high cpu usage in websGetInput.<br>
27) goahead: fix potentional security issue (extend path check in url req handler).<br>
28) goahead: fix info leak in socket reuse code.<br>
29) goahead: fix return web error code in some case.<br>
30) goahead: limit request ring length.<br>
31) init.d: add change wlan/wlan2 macs in factory.<br>
<br>
<br>
<b>2.4.x</b><br>
1) build_system: add test targets for usb devices.<br>
2) libcurl: up to 7.40.0 version.<br>
3) libnvram: fix small memleak, full code review and cleanup.<br>
4) transmission: up to 2.84.<br>
5) ethtool: disable build vendors extensions (decrease size).<br>
6) apps: add fuse ntfs-3g (2014.2.15).<br>
7) init.d: cheanup and refactor checkconf, remove unneded backup nvram and others.<br>
8) dhcpv6: add read ifname for duid generatr from /tmp/wan_if_name exported from init.d.<br>
9) kernel: exfat: add module alias for fix automount.<br>
10) kernel: ipv6: fix ipv6_cow_metrics for non DST_HOST case.<br>
11) kernel: pci: leave MEM and IO decoding disabled during 64-bit BAR sizing, too.<br>
12) kernel: huge update NAND framework from upstream.<br>
13) kernel: fix broken MT7621 USB PHY calibration (SDK bug).<br>
14) kernel: MT7620/MT7621/MT7628 SD/MMC driver cleanup, fix unload module with debug enabled.<br>
15) kernel: ralink arch: update MT7621 code.<br>
16) kernel: hw_nat: fix broken code with MT7621 HW_VLAN_RX raeth offload, fix PPPoE offload on MT7621/RT3883 with 2xGMAC + VLAN incapsulated.<br>
17) kernel: raeth: update MT7621 code & switch control, do not hard-coded disabling EEE by default.<br>
18) kernel: ralink mtd: fix overflow bug in 'ra_mtd_write_nm', add support write to NAND flash, add support write to any partition offset.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) full russian ui (need help community or employ the web developer).<br>
<br>
<br>
<br>